2004-05-25  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/olympus/mnote-olympus-entry.c: Print bytes if tag is not
	  known.

2004-05-24  Jan Patera <patera@users.sourceforge.net>

	* libjpeg/jpeg-data.[c,h]: jpeg_data_append_section changed
	  from static to public
	* libexif/olumpus/mnote-olympus-entry.c: support of several
	  known but previously not supported Nikon (& 1 Olympus) tags
	* libexif/exif-entry.c: rational values printed as %2.2f and not %i/%i

2004-05-15  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-log.[c,h]: New. Proposal for handling of debugging
	  messages.

2004-05-13  Jan Patera <patera@users.sourceforge.net>

	* libexif/exif-data.c: Fill tag data with zeros on save even
	  if 0 components (buggy Kodak-210)

2004-05-12  Jan Patera <patera@users.sourceforge.net>

	* libexif/exif-utils.h: definition of MIN
	* libexif/pentax/mnote-pentax-entry.c: min -> MIN
	  (found by Serge Droz <serge.droz@psi.ch>)

2004-05-11  Jan Patera <patera@users.sourceforge.net>

	* libjpeg/jpeg-data.c: memory leak in jpeg_data_set_exif_data,
	  return type of jpeg_data_save_file
	* libexif/exif-entry.c: proper mnote size on save
	* libexif/olympus: saving Nikon mnote

2004-05-10  Jan Patera <patera@users.sourceforge.net>

	* libexif: Support of Nikon maker note

2004-05-07  Jan Patera <patera@users.sourceforge.net>

	* libexif/exif-entry.c: fix of EXIF_TAG_COLOR_SPACE,
	  value 9 of EXIF_TAG_FLASH.
	* libexif/exif-entry.c: Fix of bug #937505 submitted by Hubert
	  Verstraete <hubs@users.sourceforge>: value 0x0058 of
	  EXIF_TAG_FLASH.

2004-05-04  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/olympus: Make it support Nikon maker notes, too. 
	  Code based on work by Serge Droz <serge.droz@psi.ch>.

2004-05-03  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-entry.c (exif_entry_initialize):
	  Added EXIF_TAG_PIXEL_[X,Y]_DIMENSION (thanks to Antonio Scuri
	  <scuri@tecgraf.puc-rio.br>).
